--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <li><a href="#beranda">Beranda</a></li>
                         <li><a href="#tentang">Tentang</a></li>
                         <li><a href="#potensi">Potensi Desa</a></li>
-                        <li><a href="infoperangkatdesa.html">Perangkat Desa</a></li>
+                        <li><a href="info/infoperangkatdesa.html">Perangkat Desa</a></li>
                         <li><a href="#galeri">Galeri</a></li>
                         <li><a href="#kontak">Kontak</a></li>
                     </ul>
